  - Fixed issues when static if contains continue or break.
- Fix broken type checks on volatile int types.
- Add stdio source input support for the compiler.
- Add support for compiler intrinsic calls at compile-time.
- Improved documentation generator to support compile-time calls in function type argument list.
- Change auto cast precedence to match regular cast.

[Modules]

memory:
- Add `join_slices` helper function.
- Add `Optional` value wrapper.

debug:
- Extend `measure_elapsed_ms_end` to provide just elapsed time without any logs.

std/type_utils:
- Add various type-related utilities, mostly moved from global `a.bl` (see deprecated section).
- Add `get_struct_member_type` returning type of the struct member by providing index.
- Add `struct_members_to_enum` converting struct to enum.

experimantal/variant:
- Add experimental tagged union implementation as 'Variant' union wrapper.

std/print:
- Fix rounding of formatted floats.
- Fix issues with negative unsigned values being incorrectly converted to string when fmt
  is used for formatting.
- Fix union types being incorrectly printed as struct.

extra/glm:
- Add version of `abs` function for vectors.
- Add helpers for column extraction from `mat4`.
- Add `quat_slerp` function.
- Add `quat_to_yaw_pitch` function.

std/static_array:
- Add `sarray_push_all` function.

std/math:
- Add `sign` function.

std/sync:
- Add missing support for condition variable broadcast `condition_signal_all`.

std/static_array:
- Add `sarray_pop_first` and `sarray_erase_keep_order`.

[Documentation]
- Add documentation for comptime call.
- Add documentation for static if.

[Deprecated]

`enum_count`                   - Use 'enum_variant_count' in 'std/type_utils' module.
`enum_variant_name`            - Use 'enum_variant_name' in 'std/type_utils' module.
`enum_variant_value`           - Use 'enum_variant_value' in 'std/type_utils' module.
`is_number`                    - Use 'is_number' in 'std/type_utils' module.