@@ -6,92 +6,94 @@
 enum error {
 	NO_ERR = 0,
 
-	ERR_FILE_NOT_FOUND           = 1,
-	ERR_INVALID_SOURCE           = 2,
-	ERR_INVALID_TOKEN            = 3,
-	ERR_UNTERMINATED_COMMENT     = 4,
-	ERR_UNTERMINATED_STRING      = 5,
-	ERR_MISSING_SEMICOLON        = 6,
-	ERR_MISSING_BRACKET          = 7,
-	ERR_UNEXPECTED_DECL          = 8,
-	ERR_EXPECTED_EXPR            = 9,
-	ERR_MISSING_COMMA            = 10,
-	ERR_EXPECTED_BODY            = 11,
-	ERR_EXPECTED_BODY_END        = 12,
-	ERR_EXPECTED_STMT            = 13,
-	ERR_BREAK_OUTSIDE_LOOP       = 14,
-	ERR_CONTINUE_OUTSIDE_LOOP    = 15,
-	ERR_UNEXPECTED_DIRECTIVE     = 16,
-	ERR_DUPLICATE_SYMBOL         = 17,
-	ERR_UNKNOWN_SYMBOL           = 18,
-	ERR_EXPECTED_TYPE            = 19,
-	ERR_EXPECTED_NAME            = 20,
-	ERR_EXPECTED_BINOP           = 21,
-	ERR_DUPLICATE_ENTRY          = 22,
-	ERR_NOT_VERIFIED             = 23,
-	ERR_CANNOT_WRITE_BC          = 24,
-	ERR_CANNOT_LINK              = 25,
-	ERR_DIFF_KIND_OF_SYMBOL      = 26,
-	ERR_INVALID_PARAM_COUNT      = 27,
-	ERR_UNKNOWN_TYPE             = 28,
-	ERR_PRIVATE                  = 29,
-	ERR_UNCOMPATIBLE_MODIF       = 30,
-	ERR_NO_MAIN_METHOD           = 31,
-	ERR_INVALID_RESULT           = 32,
-	ERR_INVALID_ARG_COUNT        = 33,
-	ERR_INVALID_ARG_TYPE         = 34,
-	ERR_INVALID_TYPE             = 35,
-	ERR_INVALID_EXPR             = 36,
-	ERR_JIT_RUN_FAILED           = 37,
-	ERR_EXPECTED_STRING          = 38,
-	ERR_EXPECTED_MODULE          = 39,
-	ERR_EXPECTED_FUNC            = 40,
-	ERR_MISSING_RETURN           = 41,
-	ERR_EMPTY                    = 42,
-	ERR_UNEXPECTED_SYMBOL        = 43,
-	ERR_MULTIPLE_MAIN            = 44,
-	ERR_EXPECTED_INITIALIZATION  = 45,
-	ERR_EXPECTED_TYPE_REF        = 46,
-	ERR_EXPECTED_TYPE_STRUCT     = 47,
-	ERR_INVALID_MUTABILITY       = 48,
-	ERR_INVALID_NAME             = 49,
-	ERR_INVALID_MEMBER_ACCESS    = 50,
-	ERR_UNIMPLEMENTED            = 51,
-	ERR_EXPECTED_CONST           = 52,
-	ERR_EXPECTED_DECL            = 53,
-	ERR_FILE_READ                = 54,
-	ERR_FILE_EMPTY               = 55,
-	ERR_INVALID_INITIALIZER      = 56,
-	ERR_INVALID_CAST             = 57,
-	ERR_INVALID_ADM              = 58,
-	ERR_DIV_BY_ZERO              = 59,
-	ERR_LIB_NOT_FOUND            = 60,
-	ERR_LIB_SYMBOL_NOT_FOUND     = 61,
-	ERR_EXPECTED_TEST_DESC       = 62,
-	ERR_NULL_POINTER             = 63,
-	ERR_INVALID_ARR_SIZE         = 64,
-	ERR_BOUND_CHECK_FAILED       = 65,
-	ERR_EMPTY_STRUCT             = 66,
-	ERR_UNINITIALIZED            = 67,
-	ERR_INVALID_ADDRES_MODE      = 68,
-	ERR_EMPTY_ENUM               = 69,
-	ERR_INVALID_DIRECTIVE        = 70,
-	ERR_UNEXPECTED_EXPR          = 71,
-	ERR_EXPECTED_COMPTIME        = 72,
-	ERR_NUM_LIT_OVERFLOW         = 73,
-	ERR_INVALID_SWITCH_CASE      = 74,
-	ERR_DUPLICIT_SWITCH_CASE     = 75,
-	ERR_INVALID_REFERENCE        = 76,
-	ERR_UNEXPECTED_RETURN        = 77,
-	ERR_AMBIGUOUS                = 78,
-	ERR_MISSING_PLATFORM         = 79,
-	ERR_UNEXPECTED_FUNCTION_BODY = 80,
-	ERR_INVALID_POLY_MATCH       = 81,
-	ERR_UNSUPPORTED_TARGET       = 82,
-	ERR_COMPILE_TIME_ABORT       = 83,
-	ERR_USER                     = 84,
-	ERR_INVALID_CALL_CONVENTION  = 85,
-	ERR_UNEXPECTED_CATCH         = 86,
+	ERR_WARNING = 10,
+
+	ERR_FILE_NOT_FOUND           = 101,
+	ERR_INVALID_SOURCE           = 102,
+	ERR_INVALID_TOKEN            = 103,
+	ERR_UNTERMINATED_COMMENT     = 104,
+	ERR_UNTERMINATED_STRING      = 105,
+	ERR_MISSING_SEMICOLON        = 106,
+	ERR_MISSING_BRACKET          = 107,
+	ERR_UNEXPECTED_DECL          = 108,
+	ERR_EXPECTED_EXPR            = 109,
+	ERR_MISSING_COMMA            = 110,
+	ERR_EXPECTED_BODY            = 111,
+	ERR_EXPECTED_BODY_END        = 112,
+	ERR_EXPECTED_STMT            = 113,
+	ERR_BREAK_OUTSIDE_LOOP       = 114,
+	ERR_CONTINUE_OUTSIDE_LOOP    = 115,
+	ERR_UNEXPECTED_DIRECTIVE     = 116,
+	ERR_DUPLICATE_SYMBOL         = 117,
+	ERR_UNKNOWN_SYMBOL           = 118,
+	ERR_EXPECTED_TYPE            = 119,
+	ERR_EXPECTED_NAME            = 120,
+	ERR_EXPECTED_BINOP           = 121,
+	ERR_DUPLICATE_ENTRY          = 122,
+	ERR_NOT_VERIFIED             = 123,
+	ERR_CANNOT_WRITE_BC          = 124,
+	ERR_CANNOT_LINK              = 125,
+	ERR_DIFF_KIND_OF_SYMBOL      = 126,
+	ERR_INVALID_PARAM_COUNT      = 127,
+	ERR_UNKNOWN_TYPE             = 128,
+	ERR_PRIVATE                  = 129,
+	ERR_UNCOMPATIBLE_MODIF       = 130,
+	ERR_NO_MAIN_METHOD           = 131,
+	ERR_INVALID_RESULT           = 132,
+	ERR_INVALID_ARG_COUNT        = 133,
+	ERR_INVALID_ARG_TYPE         = 134,
+	ERR_INVALID_TYPE             = 135,
+	ERR_INVALID_EXPR             = 136,
+	ERR_JIT_RUN_FAILED           = 137,
+	ERR_EXPECTED_STRING          = 138,
+	ERR_EXPECTED_MODULE          = 139,
+	ERR_EXPECTED_FUNC            = 140,
+	ERR_MISSING_RETURN           = 141,
+	ERR_EMPTY                    = 142,
+	ERR_UNEXPECTED_SYMBOL        = 143,
+	ERR_MULTIPLE_MAIN            = 144,
+	ERR_EXPECTED_INITIALIZATION  = 145,
+	ERR_EXPECTED_TYPE_REF        = 146,
+	ERR_EXPECTED_TYPE_STRUCT     = 147,
+	ERR_INVALID_MUTABILITY       = 148,
+	ERR_INVALID_NAME             = 149,
+	ERR_INVALID_MEMBER_ACCESS    = 150,
+	ERR_UNIMPLEMENTED            = 151,
+	ERR_EXPECTED_CONST           = 152,
+	ERR_EXPECTED_DECL            = 153,
+	ERR_FILE_READ                = 154,
+	ERR_FILE_EMPTY               = 155,
+	ERR_INVALID_INITIALIZER      = 156,
+	ERR_INVALID_CAST             = 157,
+	ERR_INVALID_ADM              = 158,
+	ERR_DIV_BY_ZERO              = 159,
+	ERR_LIB_NOT_FOUND            = 160,
+	ERR_LIB_SYMBOL_NOT_FOUND     = 161,
+	ERR_EXPECTED_TEST_DESC       = 162,
+	ERR_NULL_POINTER             = 163,
+	ERR_INVALID_ARR_SIZE         = 164,
+	ERR_BOUND_CHECK_FAILED       = 165,
+	ERR_EMPTY_STRUCT             = 166,
+	ERR_UNINITIALIZED            = 167,
+	ERR_INVALID_ADDRES_MODE      = 168,
+	ERR_EMPTY_ENUM               = 169,
+	ERR_INVALID_DIRECTIVE        = 170,
+	ERR_UNEXPECTED_EXPR          = 171,
+	ERR_EXPECTED_COMPTIME        = 172,
+	ERR_NUM_LIT_OVERFLOW         = 173,
+	ERR_INVALID_SWITCH_CASE      = 174,
+	ERR_DUPLICIT_SWITCH_CASE     = 175,
+	ERR_INVALID_REFERENCE        = 176,
+	ERR_UNEXPECTED_RETURN        = 177,
+	ERR_AMBIGUOUS                = 178,
+	ERR_MISSING_PLATFORM         = 179,
+	ERR_UNEXPECTED_FUNCTION_BODY = 180,
+	ERR_INVALID_POLY_MATCH       = 181,
+	ERR_UNSUPPORTED_TARGET       = 182,
+	ERR_COMPILE_TIME_ABORT       = 183,
+	ERR_USER                     = 184,
+	ERR_INVALID_CALL_CONVENTION  = 185,
+	ERR_UNEXPECTED_CATCH         = 186,
 };
 
 #endif // BL_ERROR_H
