@@ -1,0 +1,8 @@
+// @ERR_WARNING@
+main :: fn () s32 {
+	return 0;
+}
+
+#private
+var: s32;
+
