@@ -1,0 +1,5 @@
+// @ERR_WARNING@
+main :: fn () s32 {
+	foo :: fn () {};
+	return 0;
+}
